jdk11;去掉导航栏中的UI自动化