@@ -1,35 +1,29 @@
+FROM openjdk:11-jdk-slim as build
+WORKDIR /workspace/app
+
+COPY backend/target/*.jar .
+
+RUN mkdir -p dependency && (cd dependency; jar -xf ../*.jar)
+
 FROM metersphere/fabric8-java-alpine-openjdk11-jre
 
 LABEL maintainer="yuyu.shi@cmexpro.com"
 
-ARG MS_VERSION=v1.20.1
-ARG DEPENDENCY=backend/target/dependency
+ARG MS_VERSION=v1.20
+ARG DEPENDENCY=/workspace/app/dependency
 
-COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY ${DEPENDENCY}/META-INF /app/META-INF
-COPY ${DEPENDENCY}/BOOT-INF/classes /app
-
-# html 文件
-COPY frontend/dist/*.html /app/public/
-
-# 静态文件
-COPY frontend/dist/favicon.ico /app/static/favicon.ico
-COPY frontend/dist/fonts /app/static/fonts
-COPY frontend/dist/img /app/static/img
-COPY frontend/dist/js /app/static/js
-COPY frontend/dist/css /app/static/css
-COPY frontend/dist/*.worker.js /app/static/
-COPY frontend/src/assets/theme/index.css /app/static/css/index.css
-
+COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
+COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
 RUN mv /app/lib/ms-jmeter-core-*.jar /app/lib/ms-jmeter-core.jar
 RUN mv /app/jmeter /opt/
+RUN mkdir -p /opt/jmeter/lib/junit
 
-ENV JAVA_CLASSPATH=/app:/app/lib/ms-jmeter-core.jar:/opt/jmeter/lib/ext/*:/app/lib/*
+ENV JAVA_CLASSPATH=/app:/app/lib/ms-jmeter-core.jar:/app/lib/*
 ENV JAVA_MAIN_CLASS=io.metersphere.Application
 ENV AB_OFF=true
 ENV MS_VERSION=${MS_VERSION}
-ENV JAVA_OPTIONS="-Dfile.encoding=utf-8 -Djava.awt.headless=true --add-opens java.base/jdk.internal.loader=ALL-UNNAMED"
-
+ENV JAVA_OPTIONS="-Dfile.encoding=utf-8 -Djava.awt.headless=true"
 
 CMD ["/deployments/run-java.sh"]
